BUGFIX: #4082 - Translatable CMS fields layout broken in IE6
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/sapphire/branches/2.3@77111 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/Form.css
+++ b/css/Form.css
@@ -74,17 +74,17 @@ form button.minorAction {
 /**
  * Composite Fields - raw concatenation of fields for programmatic purposes.
  */
-.right form div.field.CompositeField {
+.right form div.CompositeField {
 	margin-left: 7.5em;
 }
-.right form div.field.CompositeField div.field {
+.right form div.CompositeField div.field {
 	font-size: 1em;
 }
 
-.right form div.field.CompositeField {
+.right form div.CompositeField {
 	clear: both;
 }	
-.right form div.field.CompositeField label.left {
+.right form div.CompositeField label.left {
 	float: left;
 	width: 10em;
 	margin-left: -10em;
